# ChatCpp

./: .clang-format  Backend.cpp  Backend.hpp  CMakeLists.txt  Design.md  client.cpp  server.cpp
.cache/clangd/index/: Backend.cpp.1B7F6432EB13614B.idx  Backend.hpp.9453CEC870C7429C.idx  Command.cpp.8AFB4CC34596DF4D.idx  Message.cpp.56EF1C76391DAF79.idx  Message.hpp.7268532BB8E4044D.idx  Package.cpp.92E282DEE9DA2080.idx  Package.hpp.FC2CCB87BC32820F.idx  Room.cpp.A10AFA19B06495DF.idx  Room.hpp.5B5C0EB44C7308E7.idx  TCPSocket.cpp.D98F2440EF9EC325.idx  TCPSocket.hpp.343C2D1F7F6C5A33.idx  ThreadPool.cpp.43891B8C117CFE90.idx  ThreadPool.hpp.CA7B4450E8CF9FB8.idx  User.cpp.115CFE6319A5879C.idx  User.hpp.226806525F297AB3.idx  client.cpp.CB9158A7370EF241.idx  server.cpp.49137606AE117C67.idx
class/socket/: Package.hpp  TCPSocket.cpp  TCPSocket.hpp
include/: CMakeLists.txt
include/socket/: Message.cpp  Message.hpp  Package.cpp  Package.hpp  TCPSocket.cpp  TCPSocket.hpp
include/thread_pool/: ThreadPool.cpp  ThreadPool.hpp
include/user/: Room.cpp  Room.hpp  User.cpp  User.hpp
lib/: Backend.cpp  Backend.hpp
lib/socket/: Message.cpp  Message.hpp  Package.cpp  Package.hpp  TCPSocket.cpp  TCPSocket.hpp
lib/user/: User.cpp  User.hpp
